# web-crawler

./: .gitignore  CMakeLists.txt  Dokumentacija.docx  LICENSE  build  readme.MD
include/: crawler.h  fetcher.h  parser.h  url_queue.h  visited_set.h
include/utils/: watchdog.h
src/: crawler.c  fetcher.c  main.c  parser.c  url_queue.c  visited_set.c
src/utils/: watchdog.c
tests/: test_main.c  test_parser.c  test_url_queue.c  test_visited_set.c
